release/UltrafastSecp256k1-v3.66.0-linux-x64/include/ufsecp/ufsecp_version.h


UFSECP_API unsigned int ufsecp_version(void);
UFSECP_API unsigned int ufsecp_abi_version(void);
UFSECP_API const char* ufsecp_version_string(void);